unpackaged/main/default/objects/pse__Billing_Event_Batch__c/pse__Billing_Event_Batch__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__BillingEventBatchHelp</customHelpPage>
    <description>Contains one or more billing events, grouped together based on various fields and factors, generated at the region, practice, or group level and released for invoicing at the batch or billing events level. Generate, release, or remove billing event batches on the Billing Event Generation tab.</description>
    <label>Billing Event Batch</label>
    <nameField>
        <displayFormat>BEB-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Event Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>