unpackaged/main/default/objects/pse__Billing_Event_Batch__c/fields/pse__Batch_Key__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_Key__c</fullName>
    <description>Generated key to identify a Billing Event Batch. Contains concatenation of Generation Time (when appendGeneratedItems = false), Account__c, CurrencyIsoCode, and Time_Period__c.</description>
    <externalId>true</externalId>
    <label>Batch Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>