unpackaged/main/default/objects/pse__Billing_Event_Batch__c/fields/pse__Is_Released__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Released__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contains true if all billing events in this batch are released.</description>
    <label>Released</label>
    <type>Checkbox</type>
</CustomField>