unpackaged/main/default/objects/pse__Billing_Event_Batch__c/fields/pse__Region__c.field-meta.xml
<CustomField>
    <fullName>pse__Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>pse__Region__c</referenceTo>
    <relationshipLabel>Billing Event Batches</relationshipLabel>
    <relationshipName>Billing_Event_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>