unpackaged/main/default/objects/pse__Billing_Event_Batch__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__Summary_Amount__c</columns>
    <columns>pse__Time_Period__c</columns>
    <columns>pse__Is_Released__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>